--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         return 2*x * x -1 ;
       }, 'blue', 3);
 
-	  myGraph.drawCoordinates(1,1, 'red', 1);
-	  myGraph.drawCoordinates(2,3, 'red', 1);
+	  <!-- myGraph.drawCoordinates(1,1, 'red', 1); -->
+	  <!-- myGraph.drawCoordinates(2,3, 'red', 1); -->
 	  
       <!-- myGraph.drawEquation(function(x) { -->
         <!-- return 1 * x; -->
