fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@
         unitsPerTick: 1
       });
 
-      <!-- myGraph.drawEquation(function(x) { -->
-        <!-- return 5 * Math.sin(x); -->
-      <!-- }, 'green', 3); -->
+      myGraph.drawEquation(function(x) {
+        return 5 * Math.sin(x);
+      }, 'green', 3);
 
       myGraph.drawEquation(function(x) {
         return 2*x * x -1 ;
       }, 'blue', 3);
 
-	  mygraph.drawcoordinates(1,1, 'red', 1);
-	  mygraph.drawcoordinates(2,3, 'red', 1);
+	  myGraph.drawCoordinates(1,1, 'red', 1);
+	  myGraph.drawCoordinates(2,3, 'red', 1);
 	  
       <!-- myGraph.drawEquation(function(x) { -->
         <!-- return 1 * x; -->
