--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@ slider2.oninput = function() {
   </div>
   <p>Learning Rate: <span id="demo3"></span></p>
   <div class="slidecontainer">
-    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider3" id="myRange3">
+    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider" id="myRange3">
   </div>
 
   <button class="button">Generate Data</button>
@@ -104,7 +104,7 @@ slider3.oninput = function() {
   </div>
   <p>Learning Rate: <span id="demo4"></span></p>
   <div class="slidecontainer">
-    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider4" id="myRange4">
+    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider" id="myRange4">
   </div>
 
   <button class="button">Generate Data</button>
