--- a/home.html
+++ b/home.html
@@ -3,122 +3,122 @@
 
 <link rel="stylesheet" type="text/css" href="homecss.css">
 <!--<script src="sliderjs.js"></script> -->
+<center>
+  <div class="container">
+    <form class="sampleSize">
+      Sample Size: <input type="text" name="Sample Size"><br>
+    </form>
 
-<div class="container">
-  <form class="sampleSize">
-    Sample Size: <input type="text" name="Sample Size"><br>
-  </form>
+    <div class="graph">
+      <svg width="250" height="250">
+        <circle cx="150" cy="150" r="90" stroke="green" stroke-width="4" fill="yellow" />
+      </svg>
+    </div>
+    <p>Learning Rate: <span id="demo"></span></p>
+    <div class="slidecontainer">
+      <input type="range" min="0" max="1" step="0.00001" value="0.5" class="slider" id="myRange">
+    </div>
 
-  <div class="graph">
+    <button class="button">Generate Data</button>
+    <button class="button">Train</button>
+  </div>
+
+  <script>
+  var slider = document.getElementById("myRange");
+  var output = document.getElementById("demo");
+  output.innerHTML = slider.value;
+
+  slider.oninput = function() {
+    output.innerHTML = this.value;
+  }
+  </script>
+
+  <div class="container">
+    <form class="sampleSize">
+      Sample Size: <input type="text" name="Sample Size"><br>
+    </form>
+
+    <div class="graph">
     <svg width="250" height="250">
-      <circle cx="150" cy="150" r="90" stroke="green" stroke-width="4" fill="yellow" />
+      <rect x="50" y="20" rx="20" ry="20" width="150" height="150"
+      style="fill:red;stroke:black;stroke-width:5;opacity:0.5" />
     </svg>
-  </div>
-  <p>Learning Rate: <span id="demo"></span></p>
-  <div class="slidecontainer">
-    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider" id="myRange">
-  </div>
+    </div>
+    <p>Learning Rate: <span id="demo2"></span></p>
+    <div class="slidecontainer">
+      <input type="range" min="0" max="1" step="0.00001" value="0.5" class="slider" id="myRange2">
+    </div>
 
-  <button class="button">Generate Data</button>
-  <button class="button">Train</button>
-</div>
-
-<script>
-var slider = document.getElementById("myRange");
-var output = document.getElementById("demo");
-output.innerHTML = slider.value;
-
-slider.oninput = function() {
-  output.innerHTML = this.value;
-}
-</script>
-
-<div class="container">
-  <form class="sampleSize">
-    Sample Size: <input type="text" name="Sample Size"><br>
-  </form>
-
-  <div class="graph">
-  <svg width="250" height="250">
-    <rect x="50" y="20" rx="20" ry="20" width="150" height="150"
-    style="fill:red;stroke:black;stroke-width:5;opacity:0.5" />
-  </svg>
-  </div>
-  <p>Learning Rate: <span id="demo2"></span></p>
-  <div class="slidecontainer">
-    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider" id="myRange2">
+    <button class="button">Generate Data</button>
+    <button class="button">Train</button>
   </div>
 
-  <button class="button">Generate Data</button>
-  <button class="button">Train</button>
-</div>
+  <script>
+  var slider2 = document.getElementById("myRange2");
+  var output2 = document.getElementById("demo2");
+  output2.innerHTML = slider2.value;
 
-<script>
-var slider2 = document.getElementById("myRange2");
-var output2 = document.getElementById("demo2");
-output2.innerHTML = slider2.value;
+  slider2.oninput = function() {
+    output2.innerHTML = this.value;
+  }
+  </script>
 
-slider2.oninput = function() {
-  output2.innerHTML = this.value;
-}
-</script>
+  <div class="container">
+    <form class="sampleSize">
+      Sample Size: <input type="text" name="Sample Size"><br>
+    </form>
 
-<div class="container">
-  <form class="sampleSize">
-    Sample Size: <input type="text" name="Sample Size"><br>
-  </form>
+    <div class="graph">
+      <svg width="250" height="250">
+        <polygon points="100,10 40,198 190,78 10,78 160,198"
+        style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />    </svg>
+    </div>
+    <p>Learning Rate: <span id="demo3"></span></p>
+    <div class="slidecontainer">
+      <input type="range" min="0" max="1" step="0.00001" value="0.5" class="slider" id="myRange3">
+    </div>
 
-  <div class="graph">
-    <svg width="250" height="250">
-      <polygon points="100,10 40,198 190,78 10,78 160,198"
-      style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />    </svg>
-  </div>
-  <p>Learning Rate: <span id="demo3"></span></p>
-  <div class="slidecontainer">
-    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider" id="myRange3">
-  </div>
-
-  <button class="button">Generate Data</button>
-  <button class="button">Train</button>
-</div>
-
-<script>
-var slider3 = document.getElementById("myRange3");
-var output3 = document.getElementById("demo3");
-output3.innerHTML = slider3.value;
-
-slider3.oninput = function() {
-  output3.innerHTML = this.value;
-}
-</script>
-
-<div class="container">
-  <form class="sampleSize">
-    Sample Size: <input type="text" name="Sample Size"><br>
-  </form>
-
-  <div class="graph">
-    <svg width="250" height="250">
-      <circle cx="150" cy="150" r="90" stroke="green" stroke-width="4" fill="yellow" />
-    </svg>
-  </div>
-  <p>Learning Rate: <span id="demo4"></span></p>
-  <div class="slidecontainer">
-    <input type="range" min="0" max="1" step="0.01" value="0.5" class="slider" id="myRange4">
+    <button class="button">Generate Data</button>
+    <button class="button">Train</button>
   </div>
 
-  <button class="button">Generate Data</button>
-  <button class="button">Train</button>
-</div>
+  <script>
+  var slider3 = document.getElementById("myRange3");
+  var output3 = document.getElementById("demo3");
+  output3.innerHTML = slider3.value;
 
-<script>
-var slider4 = document.getElementById("myRange4");
-var output4 = document.getElementById("demo4");
-output4.innerHTML = slider4.value;
+  slider3.oninput = function() {
+    output3.innerHTML = this.value;
+  }
+  </script>
 
-slider4.oninput = function() {
-  output4.innerHTML = this.value;
-}
-</script>
+  <div class="container">
+    <form class="sampleSize">
+      Sample Size: <input type="text" name="Sample Size"><br>
+    </form>
 
+    <div class="graph">
+      <svg width="250" height="250">
+        <circle cx="150" cy="150" r="90" stroke="green" stroke-width="4" fill="yellow" />
+      </svg>
+    </div>
+    <p>Learning Rate: <span id="demo4"></span></p>
+    <div class="slidecontainer">
+      <input type="range" min="0" max="1" step="0.00001" value="0.5" class="slider" id="myRange4">
+    </div>
+
+    <button class="button">Generate Data</button>
+    <button class="button">Train</button>
+  </div>
+
+  <script>
+  var slider4 = document.getElementById("myRange4");
+  var output4 = document.getElementById("demo4");
+  output4.innerHTML = slider4.value;
+
+  slider4.oninput = function() {
+    output4.innerHTML = this.value;
+  }
+  </script>
+</center>
 </html>
