integrate with Chris' GUI

--- a/home.html
+++ b/home.html
@@ -23,11 +23,11 @@
 	
     <p>Learning Rate: <span id="demo"></span></p>
     <div class="slidecontainer">
-      <input id="QuadraticLearningRate" type="range" min="0" max="1" step="0.00001" value="0.5" class="slider">
+      <input id="QuadraticLearningRate" type="range" min="0" max="0.001" step="0.0001" value="0.0005" class="slider">
     </div>
 
     <button class="button">Generate Data</button>
-    <button class="button">Train</button>
+    <button id="TrainQuadratic" class="button">Train</button>
   </div>
 
   <script>
