--- a/home.html
+++ b/home.html
@@ -6,24 +6,25 @@
 <script src="./scripts/tfjs@0.12.js"></script>
 <script src="./scripts/graph.js"></script>
 <script src="./scripts/drawer.js"></script>
-	  
+
 <!--<script src="sliderjs.js"></script> -->
 <center>
+	<!-- Quadratic Function -->
   <div class="container">
 	<h2>Quadratic function</h2>
 
     <div class="graph">
        <canvas id="QuadraticCanvas" width="578" height="578"></canvas></canvas>
     </div>
-	
+
 	<form class="sampleSize">
       Sample Size: <input id="QuadraticSampleSize" type="number" min=1000 max=100000 name="Sample Size"><br>
     </form>
 
-	
+
     <p>Learning Rate: <span id="demo"></span></p>
     <div class="slidecontainer">
-      <input id="QuadraticLearningRate" type="range" min="0" max="0.001" step="0.0001" value="0.0005" class="slider">
+      <input id="QuadraticLearningRate" type="range" min="0" max="1" step="0.0001" value="0.5" class="slider"  >
     </div>
 
     <button id="TrainQuadratic" class="button">Train</button>
@@ -39,93 +40,96 @@
   }
   </script>
 
-  <div class="container">
-	<h2>Cubic function</h2>
-    <form class="sampleSize">
-      Sample Size: <input type="text" name="Sample Size"><br>
-    </form>
+<!-- Cubic function --------->
+<div class="container">
+<h2>Cubic function</h2>
 
-    <div class="graph">
-    <svg width="250" height="250">
-      <rect x="50" y="20" rx="20" ry="20" width="150" height="150"
-      style="fill:red;stroke:black;stroke-width:5;opacity:0.5" />
-    </svg>
-    </div>
-    <p>Learning Rate: <span id="demo2"></span></p>
-    <div class="slidecontainer">
-      <input type="range" min="0" max="1" step="0.00001" value="0.5" class="slider" id="myRange2">
-    </div>
+	<div class="graph">
+ 		<canvas id="CubicCanvas" width="578" height="578"></canvas></canvas>
+	</div>
 
-    <button class="button">Generate Data</button>
-    <button class="button">Train</button>
-  </div>
+<form class="sampleSize">
+		Sample Size: <input id="CubicSampleSize" type="number" min=1000 max=100000 name="Sample Size"><br>
+	</form>
 
-  <script>
-  var slider2 = document.getElementById("myRange2");
-  var output2 = document.getElementById("demo2");
-  output2.innerHTML = slider2.value;
 
-  slider2.oninput = function() {
-    output2.innerHTML = this.value;
-  }
-  </script>
+	<p>Learning Rate: <span id="demo2"></span></p>
+	<div class="slidecontainer">
+		<input id="CubicLearningRate" type="range" min="0" max="0.001" step="0.0001" value="0.0005" class="slider">
+	</div>
 
-  <div class="container">
-    <form class="sampleSize">
-      Sample Size: <input type="text" name="Sample Size"><br>
-    </form>
+	<button id="TrainCubic" class="button">Train</button>
+</div>
 
-    <div class="graph">
-      <svg width="250" height="250">
-        <polygon points="100,10 40,198 190,78 10,78 160,198"
-        style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />    </svg>
-    </div>
-    <p>Learning Rate: <span id="demo3"></span></p>
-    <div class="slidecontainer">
-      <input type="range" min="0" max="1" step="0.00001" value="0.5" class="slider" id="myRange3">
-    </div>
+<script>
+var slider2 = document.getElementById("CubicLearningRate");
+var output2 = document.getElementById("demo2");
+output2.innerHTML = slider.value;
 
-    <button class="button">Generate Data</button>
-    <button class="button">Train</button>
-  </div>
+slider2.oninput = function() {
+	output2.innerHTML = this.value;
+}
+</script>
 
-  <script>
-  var slider3 = document.getElementById("myRange3");
-  var output3 = document.getElementById("demo3");
-  output3.innerHTML = slider3.value;
-
-  slider3.oninput = function() {
-    output3.innerHTML = this.value;
-  }
-  </script>
 
   <div class="container">
-    <form class="sampleSize">
-      Sample Size: <input type="text" name="Sample Size"><br>
-    </form>
+		<h2>Quartic function</h2>
 
-    <div class="graph">
-      <svg width="250" height="250">
-        <circle cx="150" cy="150" r="90" stroke="green" stroke-width="4" fill="yellow" />
-      </svg>
-    </div>
-    <p>Learning Rate: <span id="demo4"></span></p>
-    <div class="slidecontainer">
-      <input type="range" min="0" max="1" step="0.00001" value="0.5" class="slider" id="myRange4">
-    </div>
+			<div class="graph">
+		 		<canvas id="QuarticCanvas" width="578" height="578"></canvas></canvas>
+			</div>
 
-    <button class="button">Generate Data</button>
-    <button class="button">Train</button>
-  </div>
+		<form class="sampleSize">
+				Sample Size: <input id="QuarticSampleSize" type="number" min=1000 max=100000 name="Sample Size"><br>
+			</form>
 
-  <script>
-  var slider4 = document.getElementById("myRange4");
-  var output4 = document.getElementById("demo4");
-  output4.innerHTML = slider4.value;
 
-  slider4.oninput = function() {
-    output4.innerHTML = this.value;
-  }
-  </script>
+			<p>Learning Rate: <span id="demo3"></span></p>
+			<div class="slidecontainer">
+				<input id="QuarticLearningRate" type="range" min="0" max="0.001" step="0.0001" value="0.0005" class="slider">
+			</div>
+
+			<button id="TrainQuartic" class="button">Train</button>
+		</div>
+
+		<script>
+		var slider3 = document.getElementById("QuarticLearningRate");
+		var output3 = document.getElementById("demo3");
+		output3.innerHTML = slider.value;
+
+		slider3.oninput = function() {
+			output3.innerHTML = this.value;
+		}
+		</script>
+
+  <div class="container">
+		<h2>Quintic function</h2>
+
+			<div class="graph">
+		 		<canvas id="QuinticCanvas" width="578" height="578"></canvas></canvas>
+			</div>
+
+		<form class="sampleSize">
+				Sample Size: <input id="QuinticSampleSize" type="number" min=1000 max=100000 name="Sample Size"><br>
+			</form>
+
+
+			<p>Learning Rate: <span id="demo4"></span></p>
+			<div class="slidecontainer">
+				<input id="QuinticLearningRate" type="range" min="0" max="0.001" step="0.0001" value="0.0005" class="slider">
+			</div>
+
+			<button id="TrainQuintic" class="button">Train</button>
+		</div>
+
+		<script>
+		var slider4 = document.getElementById("QuinticLearningRate");
+		var output4 = document.getElementById("demo4");
+		output4.innerHTML = slider.value;
+
+		slider4.oninput = function() {
+			output4.innerHTML = this.value;
+		}
+		</script>
 </center>
 </html>
